// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders properly 1`] = `
<div>
  <header
    class="jsx-2405765474"
    data-testid="header_section"
  >
    <nav
      class="jsx-2405765474 wrapper"
    >
      <a
        data-testid="header_homepageLogoLink"
        href="/pt/homepage"
      >
        <img
          alt="Logo"
          data-nimg="1"
          decoding="async"
          height="35"
          loading="lazy"
          src="/images/logo.svg"
          style="color: transparent;"
          width="250"
        />
      </a>
      <ul
        class="jsx-2513558763 "
      >
        <li
          class="jsx-2513558763"
        >
          <a
            class="fontS navLinksLink"
            href="/pt/about"
          >
            Sobre
          </a>
        </li>
        <li
          class="jsx-2513558763"
        >
          <a
            class="fontS navLinksLink"
            href="/pt/projects"
          >
            Projetos
          </a>
        </li>
        <li
          class="jsx-2513558763"
        >
          <a
            class="fontS active navLinksLink"
            href="/pt/services"
          >
            Serviços
          </a>
        </li>
        <li
          class="jsx-2513558763"
        >
          <a
            class="fontS navLinksLink"
            href="/pt/contact"
          >
            Contacto
          </a>
        </li>
        <li
          class="jsx-2513558763 languageButton fontXXS"
        >
          <button
            class="jsx-2866958827"
            type="button"
          >
            pt
          </button>
        </li>
      </ul>
      <i
        aria-label="toggle menu"
        class="jsx-2279021353 menuIcon hidden"
        data-testid="menuIcon_button"
        role="button"
        tabindex="0"
      >
        <span
          class="jsx-2279021353"
        />
      </i>
    </nav>
  </header>
</div>
`;

exports[`<Header /> renders properly below phablet 1`] = `
<div>
  <header
    class="jsx-2405765474"
    data-testid="header_section"
  >
    <nav
      class="jsx-2405765474 wrapper"
    >
      <a
        data-testid="header_homepageLogoLink"
        href="/pt/homepage"
      >
        <img
          alt="Logo"
          data-nimg="1"
          decoding="async"
          height="35"
          loading="lazy"
          src="/images/logo.svg"
          style="color: transparent;"
          width="150"
        />
      </a>
      <ul
        class="jsx-2513558763 mobileLayout"
      >
        <li
          class="jsx-2513558763"
        >
          <a
            class="fontS navLinksLink"
            href="/pt/about"
          >
            Sobre
          </a>
        </li>
        <li
          class="jsx-2513558763"
        >
          <a
            class="fontS navLinksLink"
            href="/pt/projects"
          >
            Projetos
          </a>
        </li>
        <li
          class="jsx-2513558763"
        >
          <a
            class="fontS active navLinksLink"
            href="/pt/services"
          >
            Serviços
          </a>
        </li>
        <li
          class="jsx-2513558763"
        >
          <a
            class="fontS navLinksLink"
            href="/pt/contact"
          >
            Contacto
          </a>
        </li>
        <li
          class="jsx-2513558763 languageButton fontXXS white fontXS"
        >
          <button
            class="jsx-2866958827"
            type="button"
          >
            pt
          </button>
        </li>
      </ul>
      <i
        aria-label="toggle menu"
        class="jsx-2279021353 menuIcon"
        data-testid="menuIcon_button"
        role="button"
        tabindex="0"
      >
        <span
          class="jsx-2279021353"
        />
      </i>
    </nav>
  </header>
</div>
`;
